--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,62 @@
   color: #61dafb;
 }
 
+.App {
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr 1fr; 
+  gap: 0px 0px; 
+  grid-template-areas: 
+    ". . . . . ."
+    ". . . . . ."
+    ". . . . . ."; 
+}
+
+.Bedroom-1 {
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 2;
+
+}
+
+.Bedroom-2 {
+grid-column-start: 4;
+grid-column-end: 6;
+grid-row-start: 1;
+grid-row-end: 2;
+
+}
+
+.Half-bath {
+grid-column-start: 6;
+grid-column-end: 7;
+grid-row-start: 1;
+grid-row-end: 2;
+}
+
+.Bedroom-3 {
+grid-column-start: 5;
+grid-column-end: 7;
+grid-row-start: 2;
+grid-row-end: 4;
+}
+
+.LivingRoom {
+grid-column-start: 2;
+grid-column-end: 5;
+grid-row-start: 2;
+grid-row-end: 4;
+
+}
+
+.Full-bath {
+grid-column-start:1 ;
+grid-column-end: 2;
+grid-row-start: 2;
+grid-row-end: 4;
+}
+
 div {
   border: 1px solid grey;
   margin: 5px;
