--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   color: #61dafb;
 }
 
-.App {
+.container {
   display: grid; 
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
   grid-template-rows: 1fr 1fr 1fr; 
@@ -37,6 +37,8 @@
     ". . . . . ."
     ". . . . . ."
     ". . . . . ."; 
+  max-width: 700px;  
+  margin: 0 auto;
 }
 
 .Bedroom-1 {
@@ -44,7 +46,16 @@ grid-column-start: 1;
 grid-column-end: 3;
 grid-row-start: 1;
 grid-row-end: 2;
+background-color: rgba(81, 81, 208, 0.577);
 
+}
+
+.Kitchen {
+grid-column-start: 3;
+grid-column-end: 4;
+grid-row-start: 1;
+grid-row-end: 2;
+background-color: rgba(255, 0, 0, 0.392);
 }
 
 .Bedroom-2 {
@@ -52,6 +63,7 @@ grid-column-start: 4;
 grid-column-end: 6;
 grid-row-start: 1;
 grid-row-end: 2;
+background-color: rgba(81, 81, 208, 0.577);
 
 }
 
@@ -60,6 +72,7 @@ grid-column-start: 6;
 grid-column-end: 7;
 grid-row-start: 1;
 grid-row-end: 2;
+background-color: rgba(0, 128, 0, 0.413);
 }
 
 .Bedroom-3 {
@@ -67,6 +80,7 @@ grid-column-start: 5;
 grid-column-end: 7;
 grid-row-start: 2;
 grid-row-end: 4;
+background-color: rgba(81, 81, 208, 0.577);
 }
 
 .LivingRoom {
@@ -74,6 +88,7 @@ grid-column-start: 2;
 grid-column-end: 5;
 grid-row-start: 2;
 grid-row-end: 4;
+background-color: antiquewhite;
 
 }
 
@@ -82,6 +97,7 @@ grid-column-start:1 ;
 grid-column-end: 2;
 grid-row-start: 2;
 grid-row-end: 4;
+background-color: rgba(0, 128, 0, 0.413);
 }
 
 div {
